SERVER-106023 Ensure partial index discriminator matches plan enumerator index eligibility checks (#37785)

GitOrigin-RevId: 7a392258c6563bd952820ac9259b4f4b4ef0e522