jstests/query_golden/expected_output/featureFlagSbeFull/cached_partial_index_plan_not_reused_for_ineligible_query.md
@@ -256,3 +256,317 @@ Verify that 2nd query does not use cached partial index plan and returns the cor
 ```json
 [ { "_id" : 0, "a" : 0 } ]
 ```
+## 5. Collection setup
+Inserting documents
+```json
+[ { "_id" : 0, "a" : 0 } ]
+```
+Creating Index
+```json
+{
+	"spec" : {
+		"a" : 1
+	},
+	"partialFilterExpression" : {
+		"$or" : [
+			{
+				"a" : {
+					"$lt" : "a"
+				}
+			},
+			{
+				"_id" : {
+					"$eq" : 0
+				},
+				"a" : {
+					"$eq" : 0
+				}
+			}
+		]
+	}
+}
+```
+Creating Index
+```json
+{
+	"spec" : {
+		"a" : 1,
+		"m" : 1
+	},
+	"partialFilterExpression" : {
+		"$or" : [
+			{
+				"a" : {
+					"$lt" : "a"
+				}
+			},
+			{
+				"_id" : {
+					"$eq" : 0
+				},
+				"a" : {
+					"$eq" : 0
+				}
+			}
+		]
+	}
+}
+```
+Creating Index
+```json
+{
+	"spec" : {
+		"b" : 1,
+		"a" : 1
+	},
+	"partialFilterExpression" : {
+		"$or" : [
+			{
+				"a" : {
+					"$lt" : "a"
+				}
+			},
+			{
+				"_id" : {
+					"$eq" : 0
+				},
+				"a" : {
+					"$eq" : 0
+				}
+			}
+		]
+	}
+}
+```
+### Aggregation
+```json
+[
+	{
+		"$match" : {
+			"$or" : [
+				{
+					"a" : {
+						"$lt" : "a"
+					}
+				},
+				{
+					"_id" : {
+						"$eq" : 0
+					},
+					"a" : {
+						"$eq" : -1
+					}
+				}
+			]
+		}
+	},
+	{
+		"$sort" : {
+			"b" : 1
+		}
+	}
+]
+```
+### Results
+```json
+[ ]
+```
+### Aggregation
+```json
+[
+	{
+		"$match" : {
+			"$or" : [
+				{
+					"a" : {
+						"$lt" : "a"
+					}
+				},
+				{
+					"_id" : {
+						"$eq" : 0
+					},
+					"a" : {
+						"$eq" : -1
+					}
+				}
+			]
+		}
+	},
+	{
+		"$sort" : {
+			"b" : 1
+		}
+	}
+]
+```
+### Results
+```json
+[ ]
+```
+### Aggregation
+```json
+[
+	{
+		"$match" : {
+			"$or" : [
+				{
+					"a" : {
+						"$lt" : "a"
+					}
+				},
+				{
+					"_id" : {
+						"$eq" : 0
+					},
+					"a" : {
+						"$eq" : -1
+					}
+				}
+			]
+		}
+	},
+	{
+		"$sort" : {
+			"b" : 1
+		}
+	}
+]
+```
+### Results
+```json
+[ ]
+```
+### Plan cache
+Verifying that the plan cache contains an entry with the partial index
+```json
+[
+	{
+		"cachedPlan" : {
+			"inputStage" : {
+				"inputStage" : {
+					"inputStages" : [
+						{
+							"filter" : {
+								"a" : {
+									"$eq" : -1
+								}
+							},
+							"inputStage" : {
+								"direction" : "forward",
+								"indexBounds" : {
+									"_id" : [
+										"[0.0, 0.0]"
+									]
+								},
+								"indexName" : "_id_",
+								"indexVersion" : 2,
+								"isMultiKey" : false,
+								"isPartial" : false,
+								"isSparse" : false,
+								"isUnique" : true,
+								"keyPattern" : {
+									"_id" : 1
+								},
+								"stage" : "IXSCAN"
+							},
+							"stage" : "FETCH"
+						},
+						{
+							"direction" : "forward",
+							"indexBounds" : {
+								"a" : [
+									"[\"\", \"a\")"
+								]
+							},
+							"indexName" : "a_1",
+							"indexVersion" : 2,
+							"isMultiKey" : false,
+							"isPartial" : true,
+							"isSparse" : false,
+							"isUnique" : false,
+							"keyPattern" : {
+								"a" : 1
+							},
+							"multiKeyPaths" : {
+								"a" : [ ]
+							},
+							"stage" : "IXSCAN"
+						}
+					],
+					"stage" : "OR"
+				},
+				"stage" : "FETCH"
+			},
+			"memLimit" : 104857600,
+			"sortPattern" : {
+				"b" : 1
+			},
+			"stage" : "SORT",
+			"type" : "simple"
+		},
+		"createdFromQuery" : {
+			"projection" : {
+				
+			},
+			"query" : {
+				"$or" : [
+					{
+						"a" : {
+							"$lt" : "a"
+						}
+					},
+					{
+						"_id" : {
+							"$eq" : 0
+						},
+						"a" : {
+							"$eq" : -1
+						}
+					}
+				]
+			},
+			"sort" : {
+				"b" : 1
+			}
+		},
+		"isActive" : true,
+		"planCacheKey" : "243DBFC9"
+	}
+]
+```
+
+Verify that 2nd pipeline does not use cached partial index plan and returns the correct document
+### Aggregation
+```json
+[
+	{
+		"$match" : {
+			"$or" : [
+				{
+					"a" : {
+						"$lt" : 1
+					}
+				},
+				{
+					"_id" : {
+						"$eq" : 0
+					},
+					"a" : {
+						"$eq" : 0
+					}
+				}
+			]
+		}
+	},
+	{
+		"$sort" : {
+			"b" : 1
+		}
+	}
+]
+```
+### Results
+```json
+[ { "_id" : 0, "a" : 0 } ]
+```
